k8s/flux/cluster/apps/db/minio-operator/app/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-tailscale-ingress
  namespace: minio
spec:
  ingressClassName: tailscale
  rules:
    - 
      host: minio-operator-homelab.taildd1ad.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  number: 9090
  defaultBackend:
    service:
      name: console
      port:
        number: 9090
  tls:
    - hosts:
        - minio-operator-homelab.taildd1ad.ts.net
